--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -10,6 +10,7 @@ table.searched {
   padding: 0;
   text-align: center;
   cursor: pointer;
+  margin: 0;
 }
 
 button.searched {
@@ -31,6 +32,10 @@ form.searched.title{
 
 form.searched.para{
   width: 75%;
+}
+
+button.searched.para{
+
 }
 
 .searched.name{
