--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -2,6 +2,15 @@ table.searched {
   width: 100%;
 }
 
+.eitt {
+  max-width: 25%;
+  min-width: 25%;
+}
+.eitt {
+  max-width: 75%;
+  min-width: 75%;
+}
+
 .searched {
   white-space: nowrap;
   overflow: hidden;
