--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -318,18 +318,19 @@ p.dot {
 }
 
 .btn {
-  background: rgba(244,139,194,0);
+  background: rgb(40, 199, 141);
+  opacity: 0.2;
   font-size: 18px;
   padding: 6px 0px;
   width: 100%;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
-  -webkit-transition-property: background-color, border-radius;
-  transition-property: background-color, border-radius;
+  -webkit-transition-property: opacity, border-radius;
+  transition-property: opacity, border-radius;
 }
 
 .btn:hover{
-  background: rgb(40, 199, 141);
+  opacity: 1;
   border-radius: 10px;
 }
 
