--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -4,12 +4,10 @@ table.searched {
 }
 
 td.searched.eitt {
-  max-width: 25%;
-  min-width: 25%;
+  width: 25%;
 }
 td.searched.tvo {
-  max-width: 75%;
-  min-width: 75%;
+  width: 75%;
 }
 
 .searched {
