Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -333,6 +333,10 @@ p.dot {
   border-radius: 10px;
 }
 
+.faded-green {
+  background: rgba(40, 199, 141, 0.25);
+}
+
 input[type=checkbox] {
   position: absolute;
   left: -9999px;
