--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -8,7 +8,7 @@ block content
         tr.thead
           if title == 'Front'
             th
-              button.noClick Category
+              button.noClick.faded-green Category
           th
             form(method='get' action='/sort=name&page=0')
               button.btn(type='submit') User
