Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -376,6 +376,7 @@ label {
 
 input[type=checkbox]:not(:checked) ~ .search{
   visibility: hidden;
+  position:absolute;
   opacity: 0;
   margin-right: 0px;
 }
