--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -65,6 +65,8 @@ button.searched.para{
   font-size: 22px;
   font-weight: bold;
   height: 30px;
+  max-width: 100%;
+  width: 100%;
 }
 
 .searched.para{
