Updated through rs script

--- a/src/views/menu.pug
+++ b/src/views/menu.pug
@@ -50,9 +50,8 @@ block menu
               pattern = '.{2,64}'
               required title = 'must be 2-64 characters'
               )
-            input(
+            input.hidden(
               type = 'submit'
-              style = 'visibility: hidden;'
               )
 
   //- .menuFade
