--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -380,6 +380,11 @@ input[type=checkbox]:not(:checked) ~ .search{
   margin-right: 0px;
 }
 
+.hidden {
+  visibility: hidden;
+  position: absolute;
+}
+
 .newThread {
   margin: auto;
   max-width: 500px;
