Updated through rs script

--- a/src/views/menu.pug
+++ b/src/views/menu.pug
@@ -49,6 +49,7 @@ block menu
               name = 'search'
               pattern = '.{2,64}'
               required title = 'must be 2-64 characters'
+              placeholder = 'Search'
               )
             input.hidden(
               type = 'submit'
