--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -68,6 +68,7 @@ main {
 }
 
 .menu {
+  max-width: 1200px;
   background: rgb(250,180,135); /* Old browsers */
   background: -webkit-linear-gradient(left,
     rgba(250,180,135,0) 0%,
