--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,6 +5,8 @@ html(lang='is')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/searchtable.css')
   body
+    script(src='jquery.js', type='text/javascript')
+    script(src='jquery.dotdotdot.js', type='text/javascript')
     header
       a(href='/')
         h1.pageheader Forum
