--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -60,6 +60,7 @@ form.searched.title{
   text-align: left;
   font-size: 18px;
   height: 120px;
+  display: -webkit-box;
   white-space: normal;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
