Updated through rs script

--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -66,3 +66,8 @@ form.searched.title{
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
 }
+.thread.para{
+  text-align: left;
+  font-size: 18px;
+  white-space: normal;
+}
