--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -5,18 +5,53 @@ block content
 
   div.comments
     -x = 0
-    each comment in comments
-      if page == 0 & x == 0
-        h3.OPname= comment.name
-        div.OP
-          p.OPtext !{comment.paragraph}
-          -x = 1
-      else
-
-        div.comment
-        p.username
-          strong= comment.name
-        p.text !{comment.paragraph}
+    .table
+      table.searched
+        tboddy
+          - i = 0
+          each result in comments
+            -id = '/threadid=' + JSON.stringify(result.threadid) + '&page=0'
+            -date = '' + result.date
+            -date = date.slice(0,-18)
+            if i == 0
+              - i++
+              tr.colorRow
+                td.searched.eitt
+                  form.searched.name(method='get' action=id)
+                    button.searched.name(type='submit') !{result.name}
+                  form.searched.date(method='get' action=id)
+                    button.searched.date(type='submit') !{date}
+                td.searched.tvo
+                  form.searched.title(method='get' action=id)
+                    button.searched.title(type='submit') !{result.title}
+                  form.searched.para(method='get' action=id)
+                    button.searched.para(type='submit') !{result.paragraph}
+            else
+              - i--
+              tr
+                td.searched.eitt
+                  form.searched.name(method='get' action=id)
+                    button.searched.name(type='submit') !{result.name}
+                  form.searched.date(method='get' action=id)
+                    button.searched.date(type='submit') !{date}
+                td.searched.tvo
+                  //- form.searched.title(method='get' action=id)
+                  //-   button.searched.title(type='submit') !{result.title}
+                  form.thread.para(method='get' action=id)
+                    button.thread.para(type='submit') !{result.paragraph}
+    //-
+    //- each comment in comments
+    //-   if page == 0 & x == 0
+    //-     h3.OPname= comment.name
+    //-     div.OP
+    //-       p.OPtext !{comment.paragraph}
+    //-       -x = 1
+    //-   else
+    //-
+    //-     div.comment
+    //-     p.username
+    //-       strong= comment.name
+    //-     p.text !{comment.paragraph}
 
       hr
   br
