Updated through rs script

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -392,6 +392,8 @@ input[type=checkbox]:not(:checked) ~ .search{
   max-width: 500px;
 }
 
+.thread-title
+
 .comment {
   max-width: 500px;
   margin: auto;
