Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -7,7 +7,7 @@ block content
     -x = 0
     .table
       table.searched
-        tboddy
+        tbody
           - i = 0
           each result in comments
             -id = '/threadid=' + JSON.stringify(result.threadid) + '&page=0'
