--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -17,24 +17,24 @@ block content
               - i++
               tr.colorRow
                 td.searched.eitt
-                  form.searched.name(method='get' action=id)
-                    button.searched.name.noClick2(type='submit') !{result.name}
-                  form.searched.date(method='get' action=id)
-                    button.searched.date.noClick2(type='submit') !{date}
+                  div.searched.name
+                    button.searched.name.noClick2 !{result.name}
+                  div.searched.date
+                    button.searched.date.noClick2 !{date}
                 td.searched.tvo
-                  form.thread.para(method='get' action=id)
-                    button.thread.para.noClick2(type='submit') !{result.paragraph}
+                  div.thread.para
+                    button.thread.para.noClick2 !{result.paragraph}
             else
               - i--
               tr
                 td.searched.eitt
-                  form.searched.name(method='get' action=id)
-                    button.searched.name.noClick2(type='submit') !{result.name}
-                  form.searched.date(method='get' action=id)
-                    button.searched.date.noClick2(type='submit') !{date}
+                  div.searched.name
+                    button.searched.name.noClick2 !{result.name}
+                  div.searched.date
+                    button.searched.date.noClick2 !{date}
                 td.searched.tvo
-                  form.thread.para(method='get' action=id)
-                    button.thread.para.noClick2(type='submit') !{result.paragraph}
+                  form.thread.para
+                    button.thread.para.noClick2 !{result.paragraph}
       //-
       //- each comment in comments
       //-   if page == 0 & x == 0
