Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,6 +4,7 @@ html(lang='is')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/searchtable.css')
+    link(rel='stylesheet', href='/stylesheets/1055.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
   body
     header
