Updated through rs script

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -4,7 +4,8 @@ html(lang='is')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/searchtable.css')
-    link(rel='stylesheet', href='/stylesheets/1055.css')
+    link(rel='stylesheet', href='/stylesheets/small.css')
+    //- link(rel='stylesheet', href='/stylesheets/smaller.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
   body
     header
