--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,7 +5,7 @@ html(lang='is')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/searchtable.css')
     link(rel='stylesheet', href='/stylesheets/small.css')
-    //- link(rel='stylesheet', href='/stylesheets/smaller.css')
+    link(rel='stylesheet', href='/stylesheets/smaller.css')
     link(rel='icon', type='image/png' href='/images/forum-favicon.png')
   body
     header
