--- a/src/public/stylesheets/small.css
+++ b/src/public/stylesheets/small.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1100)  {
+@media screen and (max-width: 1100px)  {
   .search {
     position: absolute;
     top: 250;
