--- a/src/public/stylesheets/small.css
+++ b/src/public/stylesheets/small.css
@@ -1,13 +1,13 @@
 @media screen and (max-width: 1100px)  {
   .search {
     position: absolute;
-    top: 250;
-    right: 50;
+    top: 300px;
+    right: 164px;
   }
 
   label {
     position: absolute;
-    top: 200;
-    right: 50;
+    top: 351px;
+    right: 240px;
   }
 }
