Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -16,24 +16,24 @@ block content
             if i == 0
               - i++
               tr.colorRow
-                td.searched.eitt
-                  div.searched.name
-                    button.searched.name !{result.name}
-                  div.searched.date
-                    button.searched.date !{date}
-                td.searched.tvo
+                td.searched.eitt.noClick2
+                  div.searched.name.noClick2
+                    button.searched.name.noClick2 !{result.name}
+                  div.searched.date.noClick2
+                    button.searched.date.noClick2 !{date}
+                td.searched.tvo.noClick2
                   div.thread.para
                     button.thread.para !{result.paragraph}
             else
               - i--
               tr
-                td.searched.eitt
-                  div.searched.name
-                    button.searched.name !{result.name}
-                  div.searched.date
-                    button.searched.date !{date}
-                td.searched.tvo
-                  form.thread.para
+                td.searched.eitt.noClick2
+                  div.searched.name.noClick2
+                    button.searched.name.noClick2 !{result.name}
+                  div.searched.date.noClick2
+                    button.searched.date.noClick2 !{date}
+                td.searched.tvo.noClick2
+                  form.thread.para.noClick2
                     button.thread.para !{result.paragraph}
       //-
       //- each comment in comments
