--- a/src/public/stylesheets/searchtable.css
+++ b/src/public/stylesheets/searchtable.css
@@ -18,12 +18,12 @@ td.searched.eitt {
   margin: 0;
 }
 
-button.searched, p.searched {
+button.searched {
   padding-left: 5px;
   padding-right: 5px;
 }
 
-form.searched.name div.searched.name {
+form.searched.name {
   width: 100%;
   padding-top: 9px;
   max-width: 100%;
@@ -66,4 +66,8 @@ form.searched.title{
   text-align: left;
   font-size: 18px;
   white-space: normal;
+}
+
+.noClick2 {
+  cursor: none;
 }
