--- a/src/public/stylesheets/smaller.css
+++ b/src/public/stylesheets/smaller.css
@@ -1,7 +1,13 @@
-@media screen and (max-width: 770px)  {
+@media screen and (max-width: 1100px)  {
   .search {
     position: absolute;
-    top: 300;
-    right: 250;
+    top: 351px;
+    right: 240px;
+  }
+
+  label {
+    position: absolute;
+    top: 300px;
+    right: 164px;
   }
 }
