Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -22,8 +22,8 @@ block content
                   div.searched.date.noClick2
                     button.searched.date.noClick2 !{date}
                 td.searched.tvo.noClick2
-                  div.thread.para
-                    button.thread.para !{result.paragraph}
+                  div.thread.para.noClick2
+                    button.thread.para.noClick2 !{result.paragraph}
             else
               - i--
               tr
@@ -34,7 +34,7 @@ block content
                     button.searched.date.noClick2 !{date}
                 td.searched.tvo.noClick2
                   form.thread.para.noClick2
-                    button.thread.para !{result.paragraph}
+                    button.thread.para.noClick2 !{result.paragraph}
       //-
       //- each comment in comments
       //-   if page == 0 & x == 0
