Updated through rs script

--- a/src/views/thread.pug
+++ b/src/views/thread.pug
@@ -18,23 +18,23 @@ block content
               tr.colorRow
                 td.searched.eitt.noClick2
                   div.searched.name.noClick2
-                    button.searched.name.noClick2 !{result.name}
+                    p.searched.name.noClick2 !{result.name}
                   div.searched.date.noClick2
-                    button.searched.date.noClick2 !{date}
+                    p.searched.date.noClick2 !{date}
                 td.searched.tvo.noClick2
                   div.thread.para.noClick2
-                    button.thread.para.noClick2 !{result.paragraph}
+                    p.thread.para.noClick2 !{result.paragraph}
             else
               - i--
               tr
                 td.searched.eitt.noClick2
                   div.searched.name.noClick2
-                    button.searched.name.noClick2 !{result.name}
+                    p.searched.name.noClick2 !{result.name}
                   div.searched.date.noClick2
-                    button.searched.date.noClick2 !{date}
+                    p.searched.date.noClick2 !{date}
                 td.searched.tvo.noClick2
-                  form.thread.para.noClick2
-                    button.thread.para.noClick2 !{result.paragraph}
+                  div.thread.para.noClick2
+                    p.thread.para.noClick2 !{result.paragraph}
       //-
       //- each comment in comments
       //-   if page == 0 & x == 0
