--- a/src/public/stylesheets/smaller.css
+++ b/src/public/stylesheets/smaller.css
@@ -2,12 +2,16 @@
   .search {
     position: absolute;
     top: 351px;
-    right: 164px;
+    right: 240px;
   }
 
   label {
     position: absolute;
-    top: 351px;
-    right: 240px;
+    top: 300px;
+    right: 164px;
+  }
+
+  .main {
+    padding: 0;
   }
 }
