--- a/src/public/stylesheets/smaller.css
+++ b/src/public/stylesheets/smaller.css
@@ -2,16 +2,20 @@
   .search {
     position: absolute;
     top: 351px;
-    right: 215px;
+    right: 190px;
   }
 
   label {
     position: absolute;
     top: 300px;
-    right: 149px;
+    right: 114px;
   }
 
   main {
     padding: 0px;
+  }
+
+  .newThreadDiv {
+    float: none;
   }
 }
