--- a/src/public/stylesheets/smallest.css
+++ b/src/public/stylesheets/smallest.css
@@ -3,6 +3,30 @@
     position: absolute;
     top: 351px;
     right: 190px;
+    float: none;
+  }
+
+  label {
+    position: absolute;
+    top: 300px;
+    right: 114px;
+  }
+
+  main {
+    padding: 0px;
+  }
+
+  .newThreadDiv {
+    float: none;
+  }
+}
+
+
+@media screen and (max-width: 590px)  {
+  .search {
+    position: absolute;
+    top: 351px;
+    right: 190px;
   }
 
   label {
