--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -161,29 +161,29 @@ a{
   width: 115px;
 }
 
-.menuFade:hover + .menu {
-  background: rgb(250,180,135); /* Old browsers */
-  background: -webkit-linear-gradient(left,
-    rgba(250,180,135,0) 0%,
-    rgba(250,180,135,1) 20px,
-    rgba(250,180,135,1) 80%,
-    rgb(71, 198, 237) 85%,
-    rgb(71, 198, 237) 95%,
-    rgba(244,139,194,0) 100%);
-  background: -o-linear-gradient(left,
-    rgba(250,180,135,0) 0%,
-    rgba(250,180,135,1) 20px,
-    rgba(250,180,135,1) 80%,
-    rgb(71, 198, 237) 85%,
-    rgb(71, 198, 237) 95%,
-    rgba(244,139,194,0) 100%);
-  background: linear-gradient(to right,
-    rgba(250,180,135,0) 0%,
-    rgba(250,180,135,1) 20px,
-    rgba(250,180,135,1) 80%,
-    rgb(71, 198, 237) 85%,
-    rgb(71, 198, 237) 95%,
-    rgba(244,139,194,0) 98%);
+.newThreadDiv:hover < .menu {
+    background: rgb(250,180,135);
+    background: -webkit-linear-gradient(left,
+      rgba(250,180,135,0) 0%,
+      rgba(250,180,135,1) 20px,
+      rgba(250,180,135,1) 80%,
+      rgba(244,139,194,1) 85%,
+      rgba(244,139,194,1) 95%,
+      rgba(244,139,194,0) 100%);
+    background: -o-linear-gradient(left,
+      rgba(250,180,135,0) 0%,
+      rgba(250,180,135,1) 20px,
+      rgba(250,180,135,1) 80%,
+      rgba(244,139,194,1) 85%,
+      rgba(244,139,194,1) 95%,
+      rgba(244,139,194,0) 100%);
+    background: linear-gradient(to right,
+      rgba(250,180,135,0) 0%,
+      rgba(250,180,135,1) 20px,
+      rgba(250,180,135,1) 80%,
+      rgba(244,139,194,1) 85%,
+      rgba(244,139,194,1) 95%,
+      rgba(244,139,194,0) 98%);
 }
 
 .searchbar {
